--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,15 +33,13 @@ body {
   padding: 0;
 }
 
-/* header */
-.header__container {
+.page__container {
   background-color: #FFFFFF;
   width: 1200px;
   margin: 0 auto;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
 }
 
+/* header */
 /* меню-навигация */
 .navigation {
   display: flex;
@@ -69,7 +67,7 @@ body {
 
 }
 
-.logo {
+.logo, .logo__sedona {
   margin: 0 auto;
 }
 
@@ -119,6 +117,9 @@ body {
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
+  /* outline: 5px solid rgba(255, 99, 78, 0.5);
+  outline-offset: -5px; */
+  padding-top: 55px;
 }
 
 .welcome__description {
@@ -128,6 +129,7 @@ body {
   font-weight: normal;
   text-align: center;
   color: #333333;
+
 }
 
 /* преимущества (основной список) */
@@ -146,6 +148,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
+  padding-top: 98px;
 }
 
 .advantage__item-description {
@@ -155,6 +158,7 @@ body {
   font-weight: 400;
   color: #333333;
   text-align: center;
+  padding-bottom: 77px;
 
 }
 
@@ -190,7 +194,6 @@ body {
   padding: 0;
   text-align: center;
   width: 400px;
-  height: 384px;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -201,7 +204,6 @@ body {
   background-image: url(../images/photo-1.jpg);
   background-repeat: no-repeat;
   width: 800px;
-  height: 384px;
   flex-grow: 0;
 }
 
@@ -216,7 +218,6 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 400px;
-  height: 384px;
   background-color: #83B3D31F;
 }
 
@@ -225,7 +226,6 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 400px;
-  height: 384px;
   background-color: #83B3D333;
 }
 
@@ -234,7 +234,6 @@ body {
   justify-content: center;
   flex-direction: column;
   width: 400px;
-  height: 384px;
   background-color: #83B3D31F;
 }
 
@@ -248,7 +247,6 @@ body {
   background-image: url(../images/photo-2.jpg);
   background-repeat: no-repeat;
   width: 800px;
-  height: 384px;
 }
 
 .advantage__item-bridge {
@@ -258,12 +256,10 @@ body {
   padding: 0;
   text-align: center;
   width: 400px;
-  height: 384px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-
 
 /* преимущества (вложенный список) */
 .extra__list {
@@ -276,72 +272,55 @@ body {
   justify-content: flex-start;
 }
 
-.extra__home-img {
-  background-image: url(../images/house.svg);
-  background-repeat: no-repeat;
-  width: 75px;
-  height: 72px;
-  margin: 0 auto;
-}
-
-.extra__eat-img {
+.extra__eat {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 0;
   background-image: url(../images/eat.svg);
   background-repeat: no-repeat;
-  width: 74px;
-  height: 70px;
-  margin: 0 auto;
+  background-position: center;
 }
 
-.extra__eat-container {
+.extra__souvenirs {
   width: 400px;
-  height: 384px;
+  background-color: #83B3D31F;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   margin: 0;
-}
-
-.extra__souvenirs-img {
   background-image: url(../images/souvenir.svg);
   background-repeat: no-repeat;
-  width: 64px;
-  height: 76px;
-  margin: 0 auto;
+  background-position: center;
 }
 
-.extra__souvenirs-container {
+.extra__home {
   width: 400px;
-  height: 384px;
+  background-image: url(../images/house.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: #83B3D31F;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   margin: 0;
-}
 
-.extra__home-container {
-  width: 400px;
-  height: 384px;
-  background-color: #83B3D31F;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin: 0;
 }
 
 .extra__container{
   display: flex;
   flex-direction: crow;
   width: 1200px;
-  height: 384px;
+
 }
 
 .extra__item-home {
   font-family: "PT Sans", sans-serif;
   font-size: 24px;
-  line-height: 28px;
   font-weight: 700;
   text-transform: uppercase;
+
 }
 
 .extra__item-eat {
@@ -431,7 +410,24 @@ body {
   width: 110px;
   margin-left: 72px;
   margin-right: 61px;
+  display: flex;
+  flex-direction: row;
 
+}
+
+.button__twitter {
+  background-image: url(../images/twitter.svg);
+  background-repeat: no-repeat;
+}
+
+.button__facebook {
+  background-image: url(../images/facebook.svg);
+  background-repeat: no-repeat;
+}
+
+.button__youtube {
+  background-image: url(../images/youtube.svg);
+  background-repeat: no-repeat;
 }
 
 .social__list {
@@ -466,10 +462,7 @@ body {
   background-image: url(../images/catalog-background\ 1.jpg);
   background-repeat: no-repeat;
   width: 1200px;
-  min-height: 408px;
   margin: 0 auto;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
 }
 
 .breadcrumbs__link {
@@ -633,7 +626,6 @@ body {
   font-weight: 400;
   color: #000000;
   width: 600px;
-  height: 60px;
   padding-left: 22px;
   border-radius: 10px 0px 0px 10px;
   border: 0;
@@ -879,7 +871,8 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 1200px;
-  height: 417px;
+  padding-top: 91px;
+  padding-bottom: 91px;
 }
 
 .hotels__found-container {
