--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,27 +48,29 @@ body {
 }
 
 .navigation__list {
-  margin: 0;
   padding: 0;
-  width: 300px;
+  flex-wrap: wrap;
   list-style-type: none;
-  /* display: flex;
-  justify-content: space-between; */
-  margin: 0px;
+  display: flex;
+  margin-left: 65px;
   padding: 0px;
+  margin-top: 19px;
+  margin-bottom: 20px;
 }
 
 .navigation-user {
-  padding: 0;
+
   max-width: 250px;
   margin-left: auto;
-  margin-top: 0;
+
   list-style-type: none;
+  display: flex;
 
 }
 
 .logo, .logo__sedona {
   margin: 0 auto;
+  padding: 0;
 }
 
 .navigation__link {
@@ -78,6 +80,8 @@ body {
   font-weight: 700;
   text-decoration: none;
   color: black;
+  padding: 6px 12px 6px 12px;
+
 
 }
 
@@ -94,14 +98,16 @@ body {
   width: 1200px;
   margin: 0 auto;
   padding: 0;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
+
 }
 
 /* первый экран */
 .welcome {
   background: url(../images/divider.svg) left bottom no-repeat, url(../images/index-background.jpg)  no-repeat;
   height: 485px;
+  margin: 0px;
+  padding: 0px;
+
 }
 
 .welcome__img {
@@ -117,8 +123,6 @@ body {
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
   padding-top: 55px;
 }
 
@@ -129,6 +133,7 @@ body {
   font-weight: normal;
   text-align: center;
   color: #333333;
+  padding-bottom: 79px;
 
 }
 
@@ -148,7 +153,8 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
-  padding-top: 98px;
+  margin: 0;
+  padding-bottom: 25px;
 }
 
 .advantage__item-description {
@@ -158,7 +164,8 @@ body {
   font-weight: 400;
   color: #333333;
   text-align: center;
-  padding-bottom: 77px;
+  margin: 0;
+
 
 }
 
@@ -168,6 +175,7 @@ body {
   line-height: 21px;
   font-weight: 400;
   color: #FFFFFF;
+  margin: 0;
 }
 
 .advantage__item-number {
@@ -177,6 +185,8 @@ body {
   font-weight: 400;
   color: #333333;
   text-align: center;
+  margin: 0;
+  padding-bottom: 26px;
 }
 
 .advantage__item-city .advantage__item-number {
@@ -190,21 +200,18 @@ body {
 .advantage__item-city {
   background-color: #83B3D3;
   color: #FFFFFF;
-  margin: 0;
-  padding: 0;
   text-align: center;
   width: 400px;
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding-top: 98px;
+  padding-bottom: 77px;
 }
 
 .advantage__img-city {
   background-image: url(../images/photo-1.jpg);
   background-repeat: no-repeat;
   width: 800px;
-  flex-grow: 0;
 }
 
 .advantage__container-city {
@@ -219,6 +226,9 @@ body {
   flex-direction: column;
   width: 400px;
   background-color: #83B3D31F;
+  padding-top: 98px;
+  padding-bottom: 77px;
+
 }
 
 .advantage__road {
@@ -227,6 +237,8 @@ body {
   flex-direction: column;
   width: 400px;
   background-color: #83B3D333;
+  padding-top: 98px;
+  padding-bottom: 77px;
 }
 
 .advantage__tourists {
@@ -235,6 +247,8 @@ body {
   flex-direction: column;
   width: 400px;
   background-color: #83B3D31F;
+  padding-top: 98px;
+  padding-bottom: 77px;
 }
 
 .advantage__container-bridge {
@@ -259,6 +273,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 98px;
+  padding-bottom: 77px;
 }
 
 /* преимущества (вложенный список) */
@@ -269,18 +285,18 @@ body {
   list-style-type: none;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+
 }
 
 .extra__eat {
   width: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  margin: 0;
   background-image: url(../images/eat.svg);
   background-repeat: no-repeat;
   background-position: center;
+  margin: 0;
+  padding-top: 148px;
 }
 
 .extra__souvenirs {
@@ -288,11 +304,11 @@ body {
   background-color: #83B3D31F;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  margin: 0;
   background-image: url(../images/souvenir.svg);
   background-repeat: no-repeat;
   background-position: center;
+  margin: 0;
+  padding-top: 148px;
 }
 
 .extra__home {
@@ -303,15 +319,9 @@ body {
   background-color: #83B3D31F;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   margin: 0;
+  padding-top: 148px;
 
-}
-
-.extra__container{
-  display: flex;
-  flex-direction: crow;
-  width: 1200px;
 
 }
 
@@ -320,6 +330,9 @@ body {
   font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
+  margin: 0;
+
+
 
 }
 
@@ -329,6 +342,9 @@ body {
   line-height: 28px;
   font-weight: 700;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+
 
 }
 
@@ -338,6 +354,9 @@ body {
   line-height: 28px;
   font-weight: 700;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+
 }
 
 .extra__item-description {
@@ -346,6 +365,9 @@ body {
   line-height: 21px;
   font-weight: 400;
   color: #333333;
+  margin: 0;
+  padding-bottom: 79px;
+
 }
 
 /* поиск гостиницы */
@@ -406,42 +428,49 @@ body {
   background-color: #FFFFFF;
 }
 
-.socials {
-  width: 110px;
-  margin-left: 72px;
-  margin-right: 61px;
-  display: flex;
-  flex-direction: row;
-
-}
-
-.button__twitter {
-  background-image: url(../images/twitter.svg);
-  background-repeat: no-repeat;
-}
-
-.button__facebook {
-  background-image: url(../images/facebook.svg);
-  background-repeat: no-repeat;
-}
-
-.button__youtube {
-  background-image: url(../images/youtube.svg);
-  background-repeat: no-repeat;
-}
-
 .social__list {
+  width: 110px;
+  margin-left: 70px;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   list-style-type: none;
+  margin-top: 50px;
+
 }
 
-.telephone {
-  width: 720px;
+.twitter {
+  padding: 10px;
+
+}
+
+.facebook {
+  padding: 10px;
+  margin: 0;
+
+}
+
+.youtube {
+  padding: 10px;
+  margin: 0;
+
+
+}
+
+
+
+.academy {
+  margin-left: auto;
+  margin-right: 72px;
+  margin-top: 40px;
+  margin-bottom: 44px;
 }
 
 .academy__logo {
   width: 115px;
-  margin-right: auto;
-  margin-left: 53px;
+  /* margin-right: auto;
+  margin-left: 53px; */
 }
 
 .telephone {
@@ -453,6 +482,8 @@ body {
   color: black;
   text-decoration: none;
   text-align: center;
+  width: 720px;
+  margin-top: 40px;
 }
 
 
@@ -472,10 +503,15 @@ body {
   font-weight: 400;
   color: #FFFFFF;
   text-decoration: none;
+  margin: 0;
+  padding: 20px;
 }
 
 .breadcrumbs {
   list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 71px;
 }
 
 .hotels__form-infrastructure {
@@ -537,6 +573,29 @@ body {
 
 .buttons__sorting {
   list-style-type: none;
+  display: flex;
+  width: 160px;
+  margin-left: auto;
+  justify-content: space-between;
+}
+
+.button__tile-link {
+  padding: 10px;
+  width: 48px;
+  height: 48px;
+
+}
+
+.button__slide-link {
+  padding: 10px;
+  width: 48px;
+  height: 48px;
+}
+
+.button__list-link {
+  padding: 10px;
+  width: 48px;
+  height: 48px;
 }
 
 .hotels__list {
@@ -557,6 +616,8 @@ body {
   line-height: 39px;
   font-weight: 700;
   text-transform: uppercase;
+  margin-right: 192px;
+  padding: 0;
 
 }
 
@@ -592,15 +653,7 @@ body {
   text-transform: uppercase;
 }
 
-.mailing__title-hotels {
-  color: black;
-  font-family: "PT Sans", sans-serif;
-  font-size: 30px;
-  line-height: 36px;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
-  }
+
 
 .mailing__description-hotels {
   font-family: "PT Sans", sans-serif;
@@ -617,6 +670,8 @@ body {
   line-height: 23px;
   font-weight: 400;
   color: #333333;
+  width: 287px;
+  margin-top: 44px;
 }
 
 .mailing__input {
@@ -626,11 +681,12 @@ body {
   font-weight: 400;
   color: #000000;
   width: 600px;
+  height: 60px;
   padding-left: 22px;
   border-radius: 10px 0px 0px 10px;
   border: 0;
   margin-bottom: 94px;
-  background-color: ;
+  background-color: #F2F2F2;
 
 }
 
@@ -681,6 +737,8 @@ body {
   text-align: center;
   text-transform: uppercase;
   background-color: #756257;
+  padding: 9px 15px 10px 15px;
+  border-radius: 4px;
 }
 
 .search-hotels__link {
@@ -737,32 +795,8 @@ body {
   border: 0;
 }
 
-.pagination__select {
-  font-family: "PT Sans", sans-serif;
-  font-size: 18px;
-  line-height: 23px;
-  font-weight: 400;
-}
 
-.pagination__link {
-  font-family: "PT Sans", sans-serif;
-  font-size: 20px;
-  line-height: 26px;
-  font-weight: 700;
-  text-decoration: none;
-  background-color:#83B3D3;
-  color: #FFFFFF;
-}
 
-.pagination__current {
-  font-family: "PT Sans", sans-serif;
-  font-size: 20px;
-  line-height: 26px;
-  font-weight: 700;
-  background-color: #F2F2F2;
-  color: #000000;
-  text-decoration: none;
-}
 
 .hotels__rating {
   font-family: "PT Sans", sans-serif;
@@ -786,8 +820,6 @@ body {
 .hotels__search {
   display: flex;
   flex-direction: row;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
 }
 
 .hotels__form {
@@ -802,7 +834,8 @@ body {
   line-height: 78px;
   font-weight: 700;
   color: #FFFFFF;
-  margin: 0;
+  margin-left: 71px;
+  margin-top: 35px;
 }
 
 .hotels__buttoms {
@@ -810,16 +843,12 @@ body {
   flex-direction: column;
   margin-left: 81px;
   justify-content: center;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
 }
 
 .hotels__catalog {
   display: flex;
   width: 1056px;
   margin: 0 auto;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
   flex-direction: column;
 }
 
@@ -835,24 +864,39 @@ body {
   border: 0;
   text-transform: uppercase;
   width: 625px;
-  margin: 0 auto;
+  margin-top: 31px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 55px;
+  border-radius: 4px;
 }
+
+/* рассылка на странице с гостиницами */
 
 .mailing__hotels {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 800px;
+  margin-top: 89px;
 
   margin-left: 200px;
   margin-right: 200px;
+
 }
 
-/* .mailing {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-} */
+.mailing__title-hotels {
+  color: black;
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  }
+
 
 .mailing__input {
   display: flex;
@@ -879,24 +923,73 @@ body {
   display: flex;
   flex-direction: row;
   width: 1057px;
-  justify-content: space-between;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
   margin: 0 auto;
+  padding: 0;
 }
+
+
+/* пагинация */
 
 .pagination__container {
   display: flex;
-  flex-direction: row;
+  margin-top: 43px;
   width: 1056px;
-  margin: 0 auto;
-  justify-content: space-between;
-  /* outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px; */
-  padding-top: 43px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
 }
 
 .pagination__list {
+  display: flex;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.pagination__link {
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  text-decoration: none;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  background-color: #83B3D3;
+  margin-right: 8px;
+  border-radius: 4px;
+}
+
+.pagination__current {
+  background-color: #F2F2F2;
+  color: #000000;
+  border-radius: 4px;
 
 }
+
+.pagination__form {
+  margin-left: auto;
+}
+
+/* скрытые надписи и кнопки */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+
+
+/* для обозначения границ
+outline: 5px solid rgba(255, 99, 78, 0.5);
+  outline-offset: -5px; */
